M-node crash #41349

Closed
opened 2014-08-07 05:18:12 +02:00 by Alexey · 21 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: 2.71 (9337574)
Worked: (i don't know, i was see it yesterday)

Blender closeing, when i use a node textures, press M button to mute and try to render

Exact steps for others to reproduce the error
1.Create any texture

  type of texture - is not important
  material,world,paint or displace texture - is not important.

2.Go to Node editor, use a node for this texture, create anything(what type of node - is not important)
3.select any,press M to mute
4.Try to render or go to rendered shadng mode(Blender close)

System Information windows7 64 ASUS ATI Radeon HD6870 **Blender Version** Broken: 2.71 (9337574) Worked: (i don't know, i was see it yesterday) **Blender closeing, when i use a node textures, press M button to mute and try to render** **Exact steps for others to reproduce the error** 1.Create any texture ``` type of texture - is not important material,world,paint or displace texture - is not important. ``` 2.Go to Node editor, use a node for this texture, create anything(what type of node - is not important) 3.select any,press M to mute 4.Try to render or go to rendered shadng mode(Blender close)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Alexey self-assigned this 2014-08-07 05:18:12 +02:00
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Please try with a nightly build and upload a file that fails for you if the bug still occurs, things might have change since the 2.71 release. Also is it Cycles or Blender Internal ?

Please try with a [nightly build ](https://builder.blender.org/download/) and upload a file that fails for you if the bug still occurs, things might have change since the 2.71 release. Also is it Cycles or Blender Internal ?
Alexey was unassigned by Bastien Montagne 2014-08-07 11:43:32 +02:00
Author

This comment was removed by @Inwader77

*This comment was removed by @Inwader77*
Author

M-_node_bug_official_release.blend
This bug in Blender internal(i do not use a cycles and i do not know how use a node for textures in cycles)
To activate bug 2 methods:
1)open this file and press F12 to render(blender crush(close))
2)go to tex paint mode and paint anything with this texture(blender crush(close))
If i create any tex,use node and mute, but do not use this texture nowhere - working normal
if i use this tex for world, material, or lamp and try to render - blender close
if i use this texture for paint and try to paint anything - blender close
if i use this texture only for paint(and nowhere else) and render - working normal

I try to do this in night build (81c3fc9) - working with bug.
in blender 2.63(r45996) - not close,but ignore mute function in render and paint

P.S.1)Sometimes blender can crush, if i (for example) use this texture for world ang do to properties/world data/prewiew.
2)Sometimes(very seldom) blender do not close, but render and ignore mute function, and if i try to render again - close

[M-_node_bug_official_release.blend](https://archive.blender.org/developer/F101934/M-_node_bug_official_release.blend) This bug in Blender internal(i do not use a cycles and i do not know how use a node for textures in cycles) To activate bug 2 methods: 1)open this file and press F12 to render(blender crush(close)) 2)go to tex paint mode and paint anything with this texture(blender crush(close)) If i create any tex,use node and mute, but do not use this texture nowhere - working normal if i use this tex for world, material, or lamp and try to render - blender close if i use this texture for paint and try to paint anything - blender close if i use this texture only for paint(and nowhere else) and render - working normal I try to do this in night build (81c3fc9) - working with bug. in blender 2.63(r45996) - not close,but ignore mute function in render and paint P.S.1)Sometimes blender can crush, if i (for example) use this texture for world ang do to properties/world data/prewiew. 2)Sometimes(very seldom) blender do not close, but render and ignore mute function, and if i try to render again - close
Author

This comment was removed by @Inwader77

*This comment was removed by @Inwader77*

When hitting render, I'm getting:

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffa7fff700 (LWP 10231)]
0x0000000002761c42 in tex_input (out=0x0, sz=0, in=0x0, params=0x0, thread=0)
    at /home/kevin/src/blender-git/blender/source/blender/nodes/texture/node_texture_util.c:78
78	{

and when trying to paint:

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffc9ffb700 (LWP 10317)]
0x000000000275c07e in rgb_colorfn (out=0x0, p=0x0, node=0x0, in=0x0, thread=0)
    at /home/kevin/src/blender-git/blender/source/blender/nodes/texture/nodes/node_texture_curves.c:96
96	{

In both cases the backtrace looks like this: http://www.pasteall.org/53335/text. This is just an except as it is indefinitely repeating.

When hitting render, I'm getting: ``` Program received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffa7fff700 (LWP 10231)] 0x0000000002761c42 in tex_input (out=0x0, sz=0, in=0x0, params=0x0, thread=0) at /home/kevin/src/blender-git/blender/source/blender/nodes/texture/node_texture_util.c:78 78 { ``` and when trying to paint: ``` Program received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffc9ffb700 (LWP 10317)] 0x000000000275c07e in rgb_colorfn (out=0x0, p=0x0, node=0x0, in=0x0, thread=0) at /home/kevin/src/blender-git/blender/source/blender/nodes/texture/nodes/node_texture_curves.c:96 96 { ``` In both cases the backtrace looks like this: http://www.pasteall.org/53335/text. This is just an except as it is indefinitely repeating.
Author

I don't understand what i must do to work normal. I don't know what this code mean.
And else, try to use mute for material nodes - don't crush, but ignore mute function.
Use for scene node - working normal.

I don't understand what i must do to work normal. I don't know what this code mean. And else, try to use mute for material nodes - don't crush, but ignore mute function. Use for scene node - working normal.
Author

And else:
texture node:
2,62(r44136) and earlier - working without bug.
2.63 - 2.70 - no crush, but ignore mute
2.71 - crush
material node:
2.62(r44136)and earlier - working without bug.
2.63 - 2.71 - ignore mute function.

And else: texture node: 2,62(r44136) and earlier - working without bug. 2.63 - 2.70 - no crush, but ignore mute 2.71 - crush material node: 2.62(r44136)and earlier - working without bug. 2.63 - 2.71 - ignore mute function.
Author

For material nodes:
in viewer, output node and in preview(property window/material settings context menu) - working normal, but in 3d view and in render - bug is active
This bug is active for BI and Cycles.
In 3d view(select GLSL mode(not multtex)) with textured shading mode - working properly, with rendered mode - bug is active
versions 2.71.3(ee8dafe) and(3d4f540) - working with error

For material nodes: in viewer, output node and in preview(property window/material settings context menu) - working normal, but in 3d view and in render - bug is active This bug is active for BI and Cycles. In 3d view(select GLSL mode(not multtex)) with textured shading mode - working properly, with rendered mode - bug is active versions 2.71.3(ee8dafe) and(3d4f540) - working with error

Added subscriber: @mont29

Added subscriber: @mont29
Lukas Tönne was assigned by Sergey Sharybin 2014-08-12 10:23:00 +02:00

Added subscribers: @LukasTonne, @Sergey

Added subscribers: @LukasTonne, @Sergey

I'm having stack overflow issues actually.

@LukasTonne, seems disabling mute for texture nodes makes things stable here. I know it's an old can of worms, so maybe for now just disable mute functionality there if you're not sure how to fix it properly?

I'm having stack overflow issues actually. @LukasTonne, seems disabling mute for texture nodes makes things stable here. I know it's an old can of worms, so maybe for now just disable mute functionality there if you're not sure how to fix it properly?
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 1743c81ce1.

Closed by commit 1743c81ce1.

This issue was referenced by 1743c81ce1

This issue was referenced by 1743c81ce1b01e89728f98ea66ba1c07192bcff9

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Hey, I found something that works without disabling muting here, can @LukasTonne or @Sergey check? exec_muted_tex.patch

This should also take care of #41761 too.

Hey, I found something that works without disabling muting here, can @LukasTonne or @Sergey check? [exec_muted_tex.patch](https://archive.blender.org/developer/F110902/exec_muted_tex.patch) This should also take care of #41761 too.

This issue was referenced by 59a38ccc42

This issue was referenced by 59a38ccc4239a407e8954abd2250a68540a84e59
Author

Only in 8c3daab muting textures working normal, but muting material - ignore mute function

Only in 8c3daab muting textures working normal, but muting material - ignore mute function
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41349
No description provided.