source/blender/nodes/intern/node_exec.c
@@ -159,6 +159,8 @@ bNodeTreeExec *ntree_exec_begin(bNodeExecContext *context, bNodeTree *ntree, bNo
 	int index;
 	bNode **nodelist;
 	int totnodes, n;
+	/* XXX texnodes have threading issues with muting, have to disable it there ... */
+	bool use_muting = (ntree->type != NTREE_TEXTURE);
 	
 	/* ensure all sock->link pointers and node levels are correct */
 	ntreeUpdateTree(G.main, ntree);
@@ -182,7 +184,7 @@ bNodeTreeExec *ntree_exec_begin(bNodeExecContext *context, bNodeTree *ntree, bNo
 		for (sock = node->inputs.first; sock; sock = sock->next)
 			node_init_input_index(sock, &index);
 		
-		if (node->flag & NODE_MUTED || node->type == NODE_REROUTE) {
+		if (use_muting && (node->flag & NODE_MUTED || node->type == NODE_REROUTE)) {
 			for (sock = node->outputs.first; sock; sock = sock->next)
 				node_init_output_index(sock, &index, &node->internal_links);
 		}
